# datalog-mvp

./: Dockerfile  Makefile  README.md  acquire_img.py  camera_calibration.py  camera_parameters_12  colors.py  combine_pcd.py  csv_to_pcd.py  lidar_calibration.py  pcd_parameters.yaml  pcd_registration.py  preprocess_pcd.py  segment_pcd.py  vis_lidar.py
LidarPCD/: lidar_data_10_10_10.pcd
livox-sdk2/: CMakeCache.txt  Makefile  cmake_install.cmake
livox-sdk2/samples/: CMakeLists.txt  Makefile  cmake_install.cmake
livox-sdk2/samples/livox_lidar_ip_setup/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
livox-sdk2/samples/livox_lidar_quick_start/: CMakeLists.txt  Makefile  cmake_install.cmake  hap_config.json  main.cpp  main_pcd.cpp  pcd_file.cpp  pcd_file.h
livox-sdk2/sdk_core/: Makefile  cmake_install.cmake
